--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
 <!-- Order Modal -->
 <div class="modal" id="orderModal">
-  <div class="modal-box">
-    <h2>Confirm Your Order</h2>
+  <div class="modal-box" style="position:relative">
+    <h2>Confirm Your Order</h2><button id="closeOrderModal" class="btn btn-ghost" style="position:absolute;top:12px;right:12px">✕</button>
     <p class="small" id="selectedProduct"> </p>
     <form id="orderForm" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse" target="hiddenFrame">
       <div class="field"><input id="custName" name="entry.1128392407" placeholder="Your Name" required></div>
@@ -121,8 +121,8 @@
 
 <!-- Login Modal -->
 <div class="modal" id="loginModal">
-  <div class="modal-box">
-    <h2>Sign in</h2>
+  <div class="modal-box" style="position:relative">
+    <h2>Sign in</h2><button id="closeLogin" class="btn btn-ghost" style="position:absolute;top:12px;right:12px">✕</button>
     <p class="small">Use Google or Apple to sign in. No typing required.</p>
     <div style="display:flex;gap:10px;justify-content:center;margin-top:12px">
       <button id="googleBtnLarge" class="btn btn-primary">Sign in with Google</button>
@@ -135,8 +135,8 @@
 
 <!-- My Orders Modal -->
 <div class="modal" id="myOrdersModal">
-  <div class="modal-box">
-    <h2>My Orders</h2>
+  <div class="modal-box" style="position:relative">
+    <h2>My Orders</h2><button id="closeMyOrdersX" class="btn btn-ghost" style="position:absolute;top:12px;right:12px">✕</button>
     <div class="orders-list" id="ordersList"></div>
     <div style="display:flex;gap:10px;margin-top:12px"><button id="closeOrders" class="btn btn-ghost">Close</button></div>
   </div>
@@ -206,6 +206,16 @@ document.addEventListener('DOMContentLoaded', async () => {
 
     document.getElementById('cancelOrder').addEventListener('click', ()=>{ if(orderModal) orderModal.style.display='none'; });
 
+    // close buttons for modals
+    const closeLogin = document.getElementById('closeLogin');
+    if(closeLogin) closeLogin.addEventListener('click', ()=>{ if(loginModal) loginModal.style.display='none'; });
+
+    const closeOrderModalBtn = document.getElementById('closeOrderModal');
+    if(closeOrderModalBtn) closeOrderModalBtn.addEventListener('click', ()=>{ if(orderModal) orderModal.style.display='none'; });
+
+    const closeMyOrdersX = document.getElementById('closeMyOrdersX');
+    if(closeMyOrdersX) closeMyOrdersX.addEventListener('click', ()=>{ if(myOrdersModal) myOrdersModal.style.display='none'; });
+
     // place order: submit form and save under user's account
     document.getElementById('placeOrder').addEventListener('click', async (ev)=>{
       ev.preventDefault();
@@ -227,7 +237,8 @@ document.addEventListener('DOMContentLoaded', async () => {
         }
         await addDoc(collection(db, 'orders'), orderData);
         document.getElementById('orderStatus').style.display='block';
-        setTimeout(()=>{ if(orderModal) orderModal.style.display='none'; document.getElementById('orderStatus').style.display='none'; form.reset(); }, 1600);
+        // redirect to payment page after brief confirmation
+        setTimeout(()=>{ window.location.href = 'payment.html'; }, 1200);
       }catch(e){ console.error('save order failed', e); showLoginError('Order recorded to form but server save failed. See console.'); }
     });
 
@@ -270,5 +281,59 @@ document.addEventListener('DOMContentLoaded', async () => {
 });
 </script>
 
+
+<!-- Extra safety script: ensure modal close buttons exist and placeOrder redirects properly -->
+<script>
+(function(){
+  function safe(q){return document.querySelector(q);} 
+  function addCloseButton(modalId, btnId){
+    const modal = safe('#'+modalId);
+    if(!modal) return;
+    const box = modal.querySelector('.modal-box');
+    if(!box) return;
+    if(box.querySelector('#'+btnId)) return; // already exists
+    const btn = document.createElement('button');
+    btn.id = btnId;
+    btn.className = 'btn btn-ghost';
+    btn.style.position = 'absolute';
+    btn.style.top = '12px';
+    btn.style.right = '12px';
+    btn.innerText = '✕';
+    box.style.position = box.style.position || 'relative';
+    box.appendChild(btn);
+    btn.addEventListener('click', ()=>{ modal.style.display = 'none'; });
+  }
+
+  function ensureCloseButtons(){
+    addCloseButton('loginModal','closeLogin');
+    addCloseButton('orderModal','closeOrderModal');
+    addCloseButton('myOrdersModal','closeMyOrdersX');
+  }
+
+  // Ensure placeOrder redirects after submit/save
+  function ensurePlaceOrderRedirect(){
+    const placeBtn = safe('#placeOrder');
+    if(!placeBtn) return;
+    // remove existing handlers to avoid double-submit
+    placeBtn.replaceWith(placeBtn.cloneNode(true));
+    const newBtn = safe('#placeOrder');
+    newBtn.addEventListener('click', async function(ev){
+      ev.preventDefault();
+      const form = document.getElementById('orderForm');
+      if(!form){ alert('Form not found'); return; }
+      // submit the form to Google Forms (iframe target)
+      try{ form.submit(); }catch(e){ console.warn('form.submit failed', e); }
+      // small delay to let iframe submit, then redirect to payment
+      setTimeout(()=>{
+        try{ window.location.href = 'payment.html'; }catch(e){ console.error('redirect failed', e); }
+      }, 900);
+    });
+  }
+
+  // run after DOM ready
+  if(document.readyState === 'loading') document.addEventListener('DOMContentLoaded', ()=>{ ensureCloseButtons(); ensurePlaceOrderRedirect(); });
+  else { ensureCloseButtons(); ensurePlaceOrderRedirect(); }
+})();
+</script>
 </body>
 </html>
