--- a/index.html
+++ b/index.html
@@ -150,7 +150,52 @@ header{display:flex;align-items:center;justify-content:space-between;gap:12px;pa
 
     <div class="grid" id="productGrid">
       <div class="card">
-        <div class="tag">New</div>
+        <div class="tag">New
+
+      <!-- EXTRA PRODUCTS ADDED -->
+      <div class="card">
+        <div class="imgwrap"><img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?q=80&w=800" alt="Traditional Silk"/></div>
+        <h3>Traditional Silk Saree</h3>
+        <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹2499</div><div class="small">★★★★★</div></div>
+        <div class="card-foot"><button class="orderBtn" data-product="Traditional Silk Saree">Order Now</button></div>
+      </div>
+
+      <div class="card">
+        <div class="imgwrap"><img src="https://images.unsplash.com/photo-1520975708797-6c2adbb7b6f8?q=80&w=800" alt="Printed Saree"/></div>
+        <h3>Printed Saree</h3>
+        <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹1299</div><div class="small">★★★★☆</div></div>
+        <div class="card-foot"><button class="orderBtn" data-product="Printed Saree">Order Now</button></div>
+      </div>
+
+      <div class="card">
+        <div class="imgwrap"><img src="https://images.unsplash.com/photo-1600093463592-573f8b75edc0?q=80&w=800" alt="Kanchipuram Saree"/></div>
+        <h3>Kanchipuram Saree</h3>
+        <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹3999</div><div class="small">★★★★★</div></div>
+        <div class="card-foot"><button class="orderBtn" data-product="Kanchipuram Saree">Order Now</button></div>
+      </div>
+
+      <div class="card">
+        <div class="imgwrap"><img src="https://images.unsplash.com/photo-1583391733956-3cfb32c36ffa?q=80&w=800" alt="Banarasi Saree"/></div>
+        <h3>Banarasi Saree</h3>
+        <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹3499</div><div class="small">★★★★★</div></div>
+        <div class="card-foot"><button class="orderBtn" data-product="Banarasi Saree">Order Now</button></div>
+      </div>
+
+      <div class="card">
+        <div class="imgwrap"><img src="https://images.unsplash.com/photo-1607345366925-3b4a2b50b5df?q=80&w=800" alt="Cotton Daily Wear"/></div>
+        <h3>Cotton Daily Wear Saree</h3>
+        <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹999</div><div class="small">★★★☆☆</div></div>
+        <div class="card-foot"><button class="orderBtn" data-product="Cotton Daily Wear Saree">Order Now</button></div>
+      </div>
+
+      <div class="card">
+        <div class="imgwrap"><img src="https://images.unsplash.com/photo-1610030462145-49d1c7e5d0a4?q=80&w=800" alt="Georgette Saree"/></div>
+        <h3>Georgette Saree</h3>
+        <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹1599</div><div class="small">★★★★☆</div></div>
+        <div class="card-foot"><button class="orderBtn" data-product="Georgette Saree">Order Now</button></div>
+      </div>
+
+</div>
         <div class="imgwrap" id="img1"><img src="https://images.unsplash.com/photo-1520975918016-4d0b5b0b2f3d?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Beautiful Saree"/></div>
         <h3>Beautiful Saree</h3>
         <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹1499</div><div class="small">★★★★☆</div></div>
