--- a/index.html
+++ b/index.html
@@ -110,7 +110,70 @@
         </div>
 
         <div class="grid" id="productGrid">
-          <!-- product cards trimmed for brevity; use your existing product HTML here -->
+          <!-- product cards inserted -->
+          <div class="card">
+            <div class="tag">New</div>
+            <div class="imgwrap" id="img1"><img src="https://images.unsplash.com/photo-1520975918016-4d0b5b0b2f3d?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Beautiful Saree"/></div>
+            <h3>Beautiful Saree</h3>
+            <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹1499</div><div class="small">★★★★☆</div></div>
+            <div style="margin-top:8px"><button class="orderBtn btn" data-product="Beautiful Saree">Order Now</button></div>
+          </div>
+
+          <div class="card">
+            <div class="imgwrap" id="img2"><img src="https://images.unsplash.com/photo-1541099649105-f69ad21f3246?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Designer Saree"/></div>
+            <h3>Designer Saree</h3>
+            <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹1799</div><div class="small">★★★★★</div></div>
+            <div style="margin-top:8px"><button class="orderBtn btn" data-product="Designer Saree">Order Now</button></div>
+          </div>
+
+          <div class="card">
+            <div class="imgwrap"><img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Silk Blend"/></div>
+            <h3>Silk Blend Saree</h3>
+            <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹2199</div><div class="small">★★★★☆</div></div>
+            <div style="margin-top:8px"><button class="orderBtn btn" data-product="Silk Blend Saree">Order Now</button></div>
+          </div>
+
+          <div class="card">
+            <div class="imgwrap"><img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?q=80&w=800" alt="Traditional Silk"/></div>
+            <h3>Traditional Silk Saree</h3>
+            <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹2499</div><div class="small">★★★★★</div></div>
+            <div style="margin-top:8px"><button class="orderBtn btn" data-product="Traditional Silk Saree">Order Now</button></div>
+          </div>
+
+          <div class="card">
+            <div class="imgwrap"><img src="https://images.unsplash.com/photo-1520975708797-6c2adbb7b6f8?q=80&w=800" alt="Printed Saree"/></div>
+            <h3>Printed Saree</h3>
+            <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹1299</div><div class="small">★★★★☆</div></div>
+            <div style="margin-top:8px"><button class="orderBtn btn" data-product="Printed Saree">Order Now</button></div>
+          </div>
+
+          <div class="card">
+            <div class="imgwrap"><img src="https://images.unsplash.com/photo-1600093463592-573f8b75edc0?q=80&w=800" alt="Kanchipuram"/></div>
+            <h3>Kanchipuram Saree</h3>
+            <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹3999</div><div class="small">★★★★★</div></div>
+            <div style="margin-top:8px"><button class="orderBtn btn" data-product="Kanchipuram Saree">Order Now</button></div>
+          </div>
+
+          <div class="card">
+            <div class="imgwrap"><img src="https://images.unsplash.com/photo-1583391733956-3cfb32c36ffa?q=80&w=800" alt="Banarasi"/></div>
+            <h3>Banarasi Saree</h3>
+            <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹3499</div><div class="small">★★★★★</div></div>
+            <div style="margin-top:8px"><button class="orderBtn btn" data-product="Banarasi Saree">Order Now</button></div>
+          </div>
+
+          <div class="card">
+            <div class="imgwrap"><img src="https://images.unsplash.com/photo-1607345366925-3b4a2b50b5df?q=80&w=800" alt="Cotton"/></div>
+            <h3>Cotton Daily Wear Saree</h3>
+            <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹999</div><div class="small">★★★☆☆</div></div>
+            <div style="margin-top:8px"><button class="orderBtn btn" data-product="Cotton Daily Wear Saree">Order Now</button></div>
+          </div>
+
+          <div class="card">
+            <div class="imgwrap"><img src="https://images.unsplash.com/photo-1610030462145-49d1c7e5d0a4?q=80&w=800" alt="Georgette"/></div>
+            <h3>Georgette Saree</h3>
+            <div style="display:flex;justify-content:space-between;align-items:center"><div class="price">₹1599</div><div class="small">★★★★☆</div></div>
+            <div style="margin-top:8px"><button class="orderBtn btn" data-product="Georgette Saree">Order Now</button></div>
+          </div>
 
         </div>
       </section>
