--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Hamsa Sarees — Single Page (Admin + Ratings + Persistent Orders)</title>
+<title>Hamsa Sarees — 1Single Page (Admin + Ratings + Persistent Orders) — Close Fix</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -111,7 +111,7 @@
         </div>
 
         <div class="grid" id="productGrid">
-          <!-- fallback static products (rendered only if Firestore empty) -->
+          <!-- fallback static products -->
           <div class="card" data-pid="beautiful-saree">
             <div class="tag">New</div>
             <div class="imgwrap"><img src="https://images.unsplash.com/photo-1520975918016-4d0b5b0b2f3d?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Beautiful Saree"/></div>
@@ -152,7 +152,7 @@
     </main>
   </div>
 
-  <!-- Modals (Order, Login, Payment, My Orders, Admin) -->
+  <!-- Modals -->
   <div class="modal" id="orderModal" aria-hidden="true">
     <div class="modal-box" role="dialog" aria-modal="true">
       <button class="close-x" id="closeOrderModal" title="Close">✕</button>
@@ -165,7 +165,7 @@
         <div class="field"><input id="productField" name="entry.1866699911" readonly></div>
         <div class="modal-footer">
           <button class="btn" id="placeOrder">Place Order</button>
-          <button type="button" class="btn-ghost" id="cancelOrder">Cancel</button>
+          <button type="button" class="btn-ghost" id="cancelOrder" data-close="modal">Cancel</button>
         </div>
       </form>
       <div id="orderStatus" class="small" style="margin-top:10px;color:var(--success);display:none">Order placed. Thank you!</div>
@@ -207,11 +207,10 @@
       <button class="close-x" id="closeMyOrdersX" title="Close">✕</button>
       <h2>My Orders</h2>
       <div class="orders-list" id="ordersList"></div>
-      <div style="display:flex;gap:10px;margin-top:12px"><button id="closeOrders" class="btn-ghost">Close</button></div>
+      <div style="display:flex;gap:10px;margin-top:12px"><button id="closeOrders" class="btn-ghost" data-close="modal">Close</button></div>
     </div>
   </div>
 
-  <!-- Admin modal -->
   <div class="modal" id="adminModal" aria-hidden="true">
     <div class="modal-box" role="dialog" aria-modal="true">
       <button class="close-x" id="closeAdmin" title="Close">✕</button>
@@ -223,7 +222,7 @@
       <div class="field"><label class="small">Image URL</label><input id="admin_pImg" placeholder="https://..."></div>
       <div style="margin-top:12px;display:flex;gap:8px;justify-content:flex-end">
         <button id="adminSave" class="btn">Add Product</button>
-        <button id="adminCancel" class="btn-ghost">Cancel</button>
+        <button id="adminCancel" class="btn-ghost" data-close="modal">Cancel</button>
       </div>
     </div>
   </div>
@@ -236,7 +235,7 @@
   if(document.readyState === 'loading') await new Promise(r=>document.addEventListener('DOMContentLoaded', r));
 
   // ---- CONFIG ----
-  const ADMIN_UID = 'EenXHJIvZpavhkGTCI8EZyFAfH93'; // your admin UID (already provided)
+  const ADMIN_UID = 'EenXHJIvZpavhkGTCI8EZyFAfH93';
   const firebaseConfig = {
     apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
     authDomain: "hamsasarees-24738.firebaseapp.com",
@@ -247,7 +246,6 @@
     measurementId: "G-1G1HQGJ5XS"
   };
 
-  // ---- Firebase imports ----
   try{
     const { initializeApp } = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js');
     const authMod = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js');
@@ -261,7 +259,6 @@
     const db = getFirestore(app);
     const googleProvider = new GoogleAuthProvider();
 
-    // ---- DOM refs ----
     const $ = id => document.getElementById(id);
     const loginModal = $('loginModal'), orderModal = $('orderModal'), paymentModal = $('paymentModal'), myOrdersModal = $('myOrdersModal'), adminModal = $('adminModal');
     const loginErr = $('loginErr'), userBadge = $('userBadge'), signOutBtn = $('signOutBtn'), loginShowBtn = $('loginShowBtn'), googleBtnLarge = $('googleBtnLarge');
@@ -271,10 +268,8 @@
     function toast(msg){ if(!toastEl) return; toastEl.innerText = msg; toastEl.style.display = 'block'; setTimeout(()=>toastEl.style.display = 'none', 1800); }
     function showLoginError(msg){ if(!loginErr) return; loginErr.innerText = msg; loginErr.style.display = msg ? 'block' : 'none'; }
 
-    // handle redirect sign-in fallback
     try{ const rr = await getRedirectResult(auth); if(rr && rr.user) console.log('redirect sign-in OK', rr.user.uid); }catch(e){ console.warn('redirect result', e && e.code); }
 
-    // sign-in
     async function signInPopup(){
       showLoginError('');
       try{
@@ -296,11 +291,10 @@
 
     signOutBtn && signOutBtn.addEventListener('click', async () => { try{ await signOut(auth); toast('Signed out'); }catch(e){ console.error('signout failed', e); } });
 
-    // ---- PRODUCTS: load from Firestore (live) ----
+    // PRODUCTS: live load
     const productGrid = $('productGrid');
     const productsColRef = collection(db, 'products');
 
-    // render helper
     function renderProductCard(id, data){
       const title = data.title || 'Untitled';
       const pid = id || (title.toLowerCase().replace(/\s+/g,'-').replace(/[^a-z0-9\-]/g,''));
@@ -329,16 +323,13 @@
       return card;
     }
 
-    // live listener: show products from Firestore; if empty, keep fallback static ones
     let productsUnsub = null;
     try{
       productsUnsub = onSnapshot(productsColRef, snap=>{
         if(snap.empty){
-          // keep static fallback — but still attach rating listeners later
           attachRatingListenersToGrid();
           return;
         }
-        // clear grid and render from DB
         productGrid.innerHTML = '';
         snap.forEach(d => {
           const id = d.id; const data = d.data();
@@ -348,17 +339,14 @@
         attachRatingListenersToGrid();
       }, err => {
         console.error('products snapshot error', err);
-        // fallback: attach listeners to existing static grid
         attachRatingListenersToGrid();
       });
     }catch(e){
-      console.warn('products onSnapshot not available (maybe offline)', e);
+      console.warn('products onSnapshot not available', e);
       attachRatingListenersToGrid();
     }
 
-    // If admin adds product, it will be added to Firestore (admin-only). See admin handler below.
-
-    // ---- Attach order button delegation (works for dynamic cards) ----
+    // order delegation
     productGrid.addEventListener('click', ev=>{
       const btn = ev.target.closest('.orderBtn');
       if(!btn) return;
@@ -373,13 +361,11 @@
       if(orderModal) orderModal.style.display='flex';
     });
 
-    // ---- Rating listeners and live averages per product ----
-    // helper to attach to all cards currently in grid
+    // Rating listeners
     function attachRatingListenersToGrid(){
       document.querySelectorAll('#productGrid .card').forEach(card=>{
         const pid = card.dataset.pid || (card.querySelector('h3') && card.querySelector('h3').innerText.toLowerCase().replace(/\s+/g,'-').replace(/[^a-z0-9\-]/g,'')) ;
         if(!pid) return;
-        // attach click handlers for rate buttons (idempotent)
         card.querySelectorAll('.rateBtn').forEach(btn=>{
           if(btn._bound) return; btn._bound = true;
           btn.addEventListener('click', async (ev)=>{
@@ -393,8 +379,6 @@
           });
         });
 
-        // realtime average listener for this product
-        // store unsub on element to avoid duplicates
         if(card._ratingsUnsub) return;
         try{
           const ratingsColRef = collection(db, `products/${pid}/ratings`);
@@ -408,11 +392,9 @@
         }catch(e){ console.warn('ratings onSnapshot error', e); }
       });
     }
-
-    // run attach initially in case fallback static products exist
     attachRatingListenersToGrid();
 
-    // ---- Orders: place & persist in users/{uid}/orders ----
+    // ORDERS
     $('placeOrder').addEventListener('click', ev=>{
       ev.preventDefault();
       const name = $('custName').value.trim(), address = $('custAddress').value.trim(), phone = $('custPhone').value.trim();
@@ -461,7 +443,6 @@
       }
     });
 
-    // Load user orders (persistent) and allow delete
     async function loadUserOrders(){
       if(!auth.currentUser){ ordersList.innerHTML = '<div class="small">Please sign in</div>'; return; }
       ordersList.innerHTML = '<div class="small">Loading...</div>';
@@ -489,7 +470,6 @@
             </div>`;
           ordersList.appendChild(el);
         });
-        // attach delete handlers
         ordersList.querySelectorAll('.deleteOrderBtn').forEach(b=>{
           b.addEventListener('click', async ev=>{
             const id = ev.currentTarget.getAttribute('data-id'); if(!id) return;
@@ -512,15 +492,12 @@
       if(myOrdersModal){ myOrdersModal.style.display='flex'; myOrdersModal.removeAttribute('aria-hidden'); }
     });
 
-    // ---- Admin UI: open modal only if user is admin, and persist product to Firestore ----
+    // Admin UI
     adminBtn && adminBtn.addEventListener('click', ()=>{
       if(!auth.currentUser){ alert('Sign in as admin'); return; }
       if(auth.currentUser.uid !== ADMIN_UID){ alert('You are not admin'); return; }
       if(adminModal){ adminModal.style.display='flex'; adminModal.removeAttribute('aria-hidden'); }
     });
-    $('closeAdmin').addEventListener('click', ()=>{ if(adminModal){ adminModal.style.display='none'; adminModal.setAttribute('aria-hidden','true'); }});
-    $('adminCancel').addEventListener('click', ()=>{ if(adminModal){ adminModal.style.display='none'; adminModal.setAttribute('aria-hidden','true'); }});
-
     $('adminSave').addEventListener('click', async ()=>{
       const title = $('admin_pTitle').value.trim(); const price = Number($('admin_pPrice').value.trim()); const tag = $('admin_pTag').value.trim(); const img = $('admin_pImg').value.trim();
       if(!title || !price){ alert('Title and price required'); return; }
@@ -534,7 +511,7 @@
       }catch(err){ console.error('add product failed', err); alert('Failed to add product'); }
     });
 
-    // ---- Auth state changes: UI toggle ----
+    // Auth UI toggles
     onAuthStateChanged(auth, user=>{
       if(user){
         if(loginModal) loginModal.style.display='none';
@@ -553,7 +530,7 @@
       }
     });
 
-    // ---- Search and shopNow ----
+    // Search & shopNow
     const searchBox = $('searchBox');
     if(searchBox) searchBox.addEventListener('input', e=>{
       const v = e.target.value.toLowerCase();
@@ -564,8 +541,51 @@
     });
     const shopNow = $('shopNow'); if(shopNow) shopNow.addEventListener('click', ()=>{ const grid=document.getElementById('productGrid'); if(grid) grid.scrollIntoView({behavior:'smooth'}); });
 
-    // initial UI ready
-    console.log('Hamsa Sarees SPA ready');
+    // -----------------------------
+    // GENERIC MODAL CLOSE HANDLERS
+    // - close on clicking .close-x
+    // - close when clicking backdrop (.modal)
+    // - close on elements with data-close="modal"
+    // - close all on Escape key
+    // -----------------------------
+    document.addEventListener('click', (e) => {
+      const t = e.target;
+
+      // click on the red X (any element with class close-x)
+      if(t && t.classList && t.classList.contains('close-x')){
+        const modal = t.closest('.modal');
+        if(modal){ modal.style.display = 'none'; modal.setAttribute('aria-hidden','true'); }
+        return;
+      }
+
+      // click on any element that wants to close modal via attribute data-close="modal"
+      if(t && t.dataset && t.dataset.close === 'modal'){
+        const modal = t.closest('.modal');
+        if(modal){ modal.style.display = 'none'; modal.setAttribute('aria-hidden','true'); }
+        return;
+      }
+
+      // click on backdrop: target is exactly the .modal element (not modal-box)
+      if(t && t.classList && t.classList.contains('modal')){
+        t.style.display = 'none';
+        t.setAttribute('aria-hidden','true');
+        return;
+      }
+    });
+
+    // ESC key closes all open modals
+    document.addEventListener('keydown', (e) => {
+      if(e.key === 'Escape'){
+        document.querySelectorAll('.modal').forEach(modal => {
+          if(modal.style.display === 'flex' || modal.style.display === 'block'){
+            modal.style.display = 'none';
+            modal.setAttribute('aria-hidden','true');
+          }
+        });
+      }
+    });
+
+    console.log('Hamsa Sarees SPA ready (modal close fixes applied)');
   }catch(err){
     console.error('Init error', err);
     alert('Initialization failed — check console.');
